# Rag-Based-System

./: .gitignore  README.md  app.py  app_ui.py  main.py  pyproject.toml  requirements.txt  streamlit_app.py  test_app.py
Assignment/: Data Scientist II - Challenge (2).docx  ~$ta Scientist II - Challenge (2).docx
Notebooks/: AIDoc.ipynb  AttentionPdf.ipynb  CombineDocs.ipynb  DeepseekPdf.ipynb  InflationCalc.ipynb
RAGTest/: RAGTester.py  RAGTester2.py  evaluation_results.json  evaluation_results2.json  evaluation_results3.json  groq_evaluation_results.json  groq_evaluation_results1.json  groq_evaluation_results_adv.json  groq_evaluation_results_adv1.json  openai_evaluation_results.json  openai_evaluation_results1.json  openai_evaluation_results_adv.json  openai_evaluation_results_adv1.json  test_cases.json  test_cases2.json
flask_app/: Dockerfile  app.py
src/: AdvancedRAGPipeline.py  RAGAdvanced.py  RAGRetriever.py  data_loader.py  embedding.py  llm.py  search.py  vectoriser.py
streamlit_ui/: Dockerfile
vector_store/: chroma.sqlite3
vector_store/custom/: chroma.sqlite3
vector_store/openai/: chroma.sqlite3
